backed up index.html in index.old.html for live reference and started rewriting in modern semantic HTML with CSS Grid for the layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,3 @@
-body {
-  background-color: #f9f3df;
-}
 ul {
   padding-left: 1.5em;
 }
@@ -15,17 +12,56 @@ a {
   font-weight: 700;
 }
 
-.header {
+body {
+  background-color: #f9f3df;
+
+  display: grid;
+  grid-template:
+    "header     header"
+    "education  skills"
+    "projects   jobs"
+  ;
+
+  margin: 0 auto;
+  min-width: 720px;
+  max-width: 1024px;
+  width: 100%;
+}
+
+header {
   margin-top: 3em;
-}
-.header .col-sm-10 {
   border-bottom: 5px double #c82b32;
-  padding: 0;
-}
-.header div {
   text-align: center;
+
+  grid-area: header;
 }
-.header h1 {
+
+main {
+  font-family: Roboto;
+  font-size: 1em;
+
+  grid-area: main;
+
+  display: grid;
+  grid-template: 1fr 1fr / 1fr 1fr;
+}
+
+#education {
+  grid-area: education;
+}
+#skills {
+  grid-area: skills;
+}
+#side-projects {
+  grid-area: projects;
+}
+#jobs {
+  grid-area: jobs;
+}
+
+/***************************************************************/
+
+h1 {
   font-family: Oswald;
   font-weight: 700;
   font-size:   10vw; /*3em;*/
@@ -34,8 +70,7 @@ a {
   margin: 0;
   padding: 0;
 }
-
-.header small, .header p {
+h2 {
   font-family: "Roboto Condensed";
   font-size: 4vw;
   font-weight: 400;
@@ -43,32 +78,12 @@ a {
   margin: 0;
   padding: 0;
 }
-.header small {
-  display: inline-block;
-  float: left;
-  width: 32%;
-}
-.header small:first-of-type {
-  margin-left: 1vw;
-  text-align: left;
-}
-.header small:last-of-type {
-  text-align: right;
-}
-h2 {
+h3 {
   font-family: Oswald;
   font-weight: 700;
   font-size: 2m;
   margin-bottom: 0.5em;
 }
-.main {
-  font-family: Roboto;
-  font-size: 1em;
-}
-.main .col-md-5:last-of-type{
-  float: right;
-}
-
 h4 {
   font-weight: 700;
   font-family: Roboto;
@@ -76,7 +91,7 @@ h4 {
   font-size: 1.125em;
 }
 
-table {
+/*table {
   border: none;
   width: 100%;
   margin-top: 0;
@@ -103,26 +118,14 @@ td, .faded {
   color: #555;
 }
 
-.row {
-  padding-bottom: 1em;
-}
-
 #web-table .progress-bar {
   background-color: #7092be;
 }
+*/
 
-#skills .col-sm-6 {
-  padding-bottom: 1em;
-}
 
 #jobs li {
   padding-bottom: 0.5em;
 }
 
-.main .col-sm-4 {
-  padding-left: 2em;
-}
 
-#jobs, #skills {
-  padding-left: 2.25em;
-}
