--- a/css/styles.css
+++ b/css/styles.css
@@ -1,102 +1,40 @@
-body {
-    display: grid;
-    grid:
-        "face  name name";
+:root {
+  font-size: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: #333;
 }
 
+body {
+  width: 95vw;
+  max-width: 960px;
+  margin: 0 auto;
+}
+h1, h2, h3 {
+  font-family: Raleway, Georgia, 'Times New Roman', Times, serif
+}
 
 header {
-  display: contents;
-}
-
-main {
-  font-family: Roboto;
-  font-size: 1em;
-
-  grid-area: main;
-
   display: grid;
-  grid-template: 1fr 1fr / 1fr 1fr;
+  grid-template-columns: 1fr 2fr 2fr;
+}
+header #face {
+  grid-column: 1 / 2;
+}
+header h1 {
+  grid-column: 2 / -1;
 }
 
-#education {
-  grid-area: education;
-}
-#skills {
-  grid-area: skills;
-}
-#side-projects {
-  grid-area: projects;
-}
-#jobs {
-  grid-area: jobs;
+.category {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  font-size: 1.6rem;
 }
 
-/***************************************************************/
-
-h1 {
-  font-family: Oswald;
-  font-weight: 700;
-  font-size:   10vw; /*3em;*/
-  color: #252525;
-  line-height: 10vw;
-  margin: 0;
-  padding: 0;
+.category h3 {
+  grid-column: 1 / -1;
+  font-size: 3rem;
+  text-align: left;
 }
-h2 {
-  font-family: "Roboto Condensed";
-  font-size: 4vw;
-  font-weight: 400;
-  color: #777;
-  margin: 0;
-  padding: 0;
-}
-h3 {
-  font-family: Oswald;
-  font-weight: 700;
-  font-size: 2m;
-  margin-bottom: 0.5em;
-}
-h4 {
-  font-weight: 700;
-  font-family: Roboto;
-  margin-bottom: 0;
-  font-size: 1.125em;
-}
-
-/*table {
-  border: none;
-  width: 100%;
-  margin-top: 0;
-}
-td:first-of-type {
-  padding-right: 10px;
-  width: 110px;
-}
-span.progress-bar {
-  background-color: #c82b32;
-  display: inline-block;
-  height: 5px;
-  width: 0px;
-}
-td.skill-category {
-  padding-top: 1em;
-  font-size: 1.125em;
-}
-tr:first-of-type td.skill-category {
-  padding-top: 0;
-}
-td, .faded {
-  font-size: 0.85em;
-  color: #555;
-}
-
-#web-table .progress-bar {
-  background-color: #7092be;
-}
-*/
-
-
-#jobs li {
-  padding-bottom: 0.5em;
+.category:nth-child(2n) h3 {
+  text-align: right;
 }
