--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,73 @@
+* {
+	box-sizing: border-box;
+}
+
 :root {
-  font-size: 10px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: #333;
+	font-size: 10px;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
+		'Open Sans', 'Helvetica Neue', sans-serif;
+	color: #333;
 }
 
 body {
-  width: 95vw;
-  max-width: 960px;
-  margin: 0 auto;
+	width: 95vw;
+	max-width: 960px;
+	margin: 0 auto;
+	padding-top: 5rem;
 }
-h1, h2, h3 {
-  font-family: Raleway, Georgia, 'Times New Roman', Times, serif
+h1,
+h2,
+h3 {
+	font-family: Raleway, Georgia, 'Times New Roman', Times, serif;
 }
 
 header {
-  display: grid;
-  grid-template-columns: 1fr 2fr 2fr;
+	display: grid;
+	grid-template-columns: 1fr 2fr 2fr;
 }
 header #face {
-  grid-column: 1 / 2;
+	grid-column: 1 / 2;
+	border: 5px dotted;
+	border-radius: 50%;
 }
 header h1 {
-  grid-column: 2 / -1;
+	grid-column: 2 / 4;
+	display: flex;
+	flex-direction: column;
+	align-content: stretch;
+	font-size: 3rem;
+}
+header h1 .top {
+	text-align: left;
+}
+header h1 mark {
+	font-size: 3em;
+}
+header h1 .bottom {
+	text-align: right;
 }
 
 .category {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  font-size: 1.6rem;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 1em;
+	font-size: 1.6rem;
 }
 
 .category h3 {
-  grid-column: 1 / -1;
-  font-size: 3rem;
-  text-align: left;
+	grid-column: 1 / -1;
+	font-size: 3rem;
+	text-align: left;
 }
 .category:nth-child(2n) h3 {
-  text-align: right;
+	text-align: right;
+}
+
+.dev-logo {
+	width: 33px;
+	height: 21px;
+	padding: 7px 8px 6px 10px;
+	border-radius: 3px;
+	fill: white;
+	background: black;
 }
